Changed marker colours

--- a/artillary/index.html
+++ b/artillary/index.html
@@ -258,7 +258,7 @@
         
         // Store added markers
         let markerCount = 0;
-        const colors = ['#FF3B30', '#34C759', '#007AFF', '#FF9500', '#AF52DE', '#FFCC00'];
+        const colors = ['#FF3B30', '#34C759', '#00ffde', '#FF9500', '#AF52DE', '#fff200'];
         
         // Add marker function
         function addMarker() {
